--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,217 +1,71 @@
-#--------------------------------------------------------------------------------
-# Workflow configuration
-#--------------------------------------------------------------------------------
-
 name: Build
-on:
-  push:               # Run on push
-  pull_request:       # Run on pull-request
 
-#--------------------------------------------------------------------------------
-# Define application name & version
-#--------------------------------------------------------------------------------
-
-env:
-  VERSION: "0.1.0"
-  EXECUTABLE: "VisualLinkerScript"
-  APPLICATION: "Visual Linker Script"
-  QMAKE_PROJECT: "VisualLinkerScript.pro"
-  QML_DIR_NIX: "assets/qml"
-  QML_DIR_WIN: "assets\\qml"
-
-#--------------------------------------------------------------------------------
-# Workflow jobs (GNU/Linux, macOS & Windows)
-#--------------------------------------------------------------------------------
+on: [push, pull_request]
 
 jobs:
-  #
-  # GNU/Linux build (we run on Ubuntu 16.04 to generate AppImage)
-  #
   build-linux:
-    runs-on: ubuntu-16.04
+    runs-on: ubuntu-latest
     steps:
-      #
-      # Checkout the repository
-      #
-      - name: Checkout repository and submodules
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
+    - uses: actions/checkout@v2
+    - name: Set up Qt
+      uses: jurplel/install-qt-action@v2
+      with:
+        version: '5.15.2'
+        host: 'linux'
+        target: 'desktop'
+        arch: 'gcc_64'
+    - name: Install dependencies
+      run: sudo apt-get install -y build-essential libgl1-mesa-dev
+    - name: Configure
+      run: |
+        mkdir build
+        cd build
+        qmake ../src/VisualLinkerScript.pro
+    - name: Build
+      run: |
+        cd build
+        make
 
-      #
-      # Install Qt
-      #
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v4
-          
-      #
-      # Install additional dependencies, stolen from:
-      # https://github.com/mapeditor/tiled/blob/master/.github/workflows/packages.yml
-      #
-      - name: Install dependencies
-        run: |
-             sudo apt-get update
-             sudo apt-get install libgl1-mesa-dev libxkbcommon-x11-0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-render-util0 libxcb-xinerama0 libzstd-dev
-        
-      #
-      # Compile the application
-      #
-      - name: Compile
-        run: |
-             qmake ${{env.QMAKE_PROJECT}} CONFIG+=release CONFIG+=c++17 PREFIX=/usr
-             make -j8
-             
-      #
-      # Create the AppImage
-      #
-      - name: Create AppImage
-        run: | 
-             make INSTALL_ROOT=appdir install
-             wget -c -nv "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage" -O linuxdeployqt
-             chmod a+x linuxdeployqt
-             ./linuxdeployqt appdir/usr/share/applications/*.desktop -appimage -bundle-non-qt-libs -extra-plugins=imageformats/libqsvg.so -qmldir="${{env.QML_DIR_NIX}}"
-     
-      #
-      # Rename AppImage to match "%AppName%-%Version%-Linux.AppImage" format
-      #
-      - name: Rename AppImage
-        run: mv *.AppImage ${{env.EXECUTABLE}}-${{env.VERSION}}-Linux.AppImage
-        
-      #
-      # Upload AppImage to build artifacts
-      #
-      - name: Upload AppImage
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{env.EXECUTABLE}}-${{env.VERSION}}-Linux.AppImage
-          path: ${{env.EXECUTABLE}}-${{env.VERSION}}-Linux.AppImage
-             
-  #
-  # macOS build
-  #
-  build-mac:
-    runs-on: macos-latest
-    steps:
-      #
-      # Checkout the repository
-      #
-      - name: Checkout repository and submodules
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      #
-      # Install Qt
-      #
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v4
-      
-      #
-      # Compile application
-      #
-      - name: Compile
-        run: |
-             qmake ${{env.QMAKE_PROJECT}} CONFIG+=release CONFIG+=c++17
-             make -j8
-             
-      #
-      # Deploy application
-      #
-      - name: Deploy app
-        run: |
-             macdeployqt ${{env.EXECUTABLE}}.app -qmldir="${{env.QML_DIR_NIX}}"
-             mv "${{env.EXECUTABLE}}.app" "${{env.APPLICATION}}.app"  
-      
-      #
-      # ZIP application "%AppName%-%Version%-macOS.zip"
-      # We use ditto instead of zip to use the same commands as Finder
-      #
-      - name: Create ZIP file
-        run: |
-             ditto -c -k --sequesterRsrc --keepParent "${{env.APPLICATION}}.app" ${{env.EXECUTABLE}}-${{env.VERSION}}-macOS.zip
-     
-      #
-      # Upload ZIP to build artifacts
-      #
-      - name: Upload ZIP
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{env.EXECUTABLE}}-${{env.VERSION}}-macOS.zip
-          path: ${{env.EXECUTABLE}}-${{env.VERSION}}-macOS.zip
-          
-  #
-  # Windows build
-  #
   build-windows:
     runs-on: windows-latest
     steps:
-      #
-      # Checkout the repository
-      #
-      - name: Checkout repository and submodules
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      
-      #
-      # Configure MSVC
-      #
-      - name: Configure MSVC
-        uses: ilammy/msvc-dev-cmd@v1
-        with:
-          arch: x64
-          spectre: true
+    - uses: actions/checkout@v2
+    - name: Set up Qt
+      uses: jurplel/install-qt-action@v2
+      with:
+        version: '5.15.2'
+        host: 'windows'
+        target: 'desktop'
+        arch: 'win64_msvc2019_64'
+    - name: Configure
+      run: |
+        mkdir build
+        cd build
+        qmake ../src/VisualLinkerScript.pro
+    - name: Build
+      run: |
+        cd build
+        nmake
 
-      #
-      # Install Qt
-      #
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v4
-          
-      #
-      # Install NSIS
-      #  
-      - name: Install NSIS
-        run: |
-             Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
-             scoop bucket add extras
-             scoop install nsis
- 
-      #
-      # Compile application
-      #
-      - name: Compile
-        run: |
-             qmake ${{env.QMAKE_PROJECT}} CONFIG+=release CONFIG+=c++17
-             nmake
-             
-      #
-      # Copy Qt DLLs, compiler runtime & application icon
-      #       
-      - name: Deploy
-        run: |
-             mkdir bin
-             move release/${{env.EXECUTABLE}}.exe bin
-             windeployqt bin/${{env.EXECUTABLE}}.exe -qmldir="${{env.QML_DIR_WIN}}" --compiler-runtime
-             mkdir "${{env.APPLICATION}}"
-             move bin "${{env.APPLICATION}}"
-             xcopy deploy\windows\resources\icon.ico "${{env.APPLICATION}}"
-      
-      #
-      # Create NSIS installer
-      #
-      - name: Make NSIS installer
-        run: |
-             move "${{env.APPLICATION}}" deploy\windows\nsis\
-             cd deploy\windows\nsis
-             makensis /X"SetCompressor /FINAL lzma" setup.nsi
-             ren *.exe ${{env.EXECUTABLE}}-${{env.VERSION}}-Windows.exe
-             
-      #
-      # Upload installer to build artifacts
-      #
-      - name: Upload NSIS installer
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{env.EXECUTABLE}}-${{env.VERSION}}-Windows.exe
-          path: deploy/windows/nsis/${{env.EXECUTABLE}}-${{env.VERSION}}-Windows.exe
+  build-macos:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Qt
+      uses: jurplel/install-qt-action@v2
+      with:
+        version: '5.15.2'
+        host: 'mac'
+        target: 'desktop'
+        arch: 'clang_64'
+    - name: Install dependencies
+      run: brew install qt
+    - name: Configure
+      run: |
+        mkdir build
+        cd build
+        qmake ../src/VisualLinkerScript.pro
+    - name: Build
+      run: |
+        cd build
+        make
